--- a/CsabaDu.DynamicTestData.Lite.NUnit.csproj
+++ b/CsabaDu.DynamicTestData.Lite.NUnit.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>CsabaDu Dynamic Test Data Lite NUnit</Title>
-    <Version>2.2.2-beta</Version>
+    <Version>2.2.3-beta</Version>
     <Company>CsabaDu</Company>
     <Description>An extension of CsabaDu.DynamicTestData.Lite framework to facilitate dynamic data-driven testing in xUnit.</Description>
     <Copyright>(c) 2025. Csaba Dudas (CsabaDu)</Copyright>
@@ -20,8 +20,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsabaDu.DynamicTestData.Lite" Version="2.2.2-beta" />
     <PackageReference Include="NUnitLite" Version="4.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CsabaDu.DynamicTestData.Lite\CsabaDu.DynamicTestData.Lite.csproj" />
   </ItemGroup>
 
   <ItemGroup>
