--- a/CsabaDu.DynamicTestData.Lite.NUnit.csproj
+++ b/CsabaDu.DynamicTestData.Lite.NUnit.csproj
@@ -6,9 +6,9 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>CsabaDu Dynamic Test Data Lite NUnit</Title>
-    <Version>2.2.3-beta</Version>
+    <Version>2.2.4-beta</Version>
     <Company>CsabaDu</Company>
-    <Description>An extension of CsabaDu.DynamicTestData.Lite framework to facilitate dynamic data-driven testing in xUnit.</Description>
+    <Description>An extension of CsabaDu.DynamicTestData.Lite framework to facilitate dynamic data-driven testing in NUnit.</Description>
     <Copyright>(c) 2025. Csaba Dudas (CsabaDu)</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageTags>dynamic; unit; test; data; driven; typesafe; threadsafe; extensible; nunit; modular; TestCaseData;</PackageTags>
